Добавлены еще несколько страниц

--- a/lk1.html
+++ b/lk1.html
@@ -195,114 +195,225 @@
                   <div class="line_param_border"></div>
                 </div>
               </div>
-              <div class="component_body_open">
+              <div class="component_body_open" style="padding-bottom: 50px;">
                 <h3>Личная информация</h3>
-                <a href="#" class="more">Раскрыть</a>
+                <a href="#" class="open">Раскрыть</a>
               </div>
               <div class="hidden_component">
                 <h3>Дополнительная информация для трансферта</h3>
-                <div class="l_p">
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Нективность:
+                <div class="component_body">
+                  <div class="line_param_input">
+                    <div class="l_p">
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Нективность:
+                        </div>
+                        <div class="line_param_bottom">
+                          9/3/5
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Групповой объем (ГО):
+                        </div>
+                        <div class="line_param_bottom">
+                          235
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Организационный объем (ОО):
+                        </div>
+                        <div class="line_param_bottom">
+                          569
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Баллы в резерве:
+                        </div>
+                        <div class="line_param_bottom">
+                          231
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Ранг на начало:
+                        </div>
+                        <div class="line_param_bottom">
+                          Наименование
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Ранг на конец месяца:
+                        </div>
+                        <div class="line_param_bottom">
+                          Наименование
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Дата достижения максимального ранга:
+                        </div>
+                        <div class="line_param_bottom">
+                          12.08.2019
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Дата окончания лидерской программы:
+                        </div>
+                        <div class="line_param_bottom">
+                          30.11.2022
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
                     </div>
-                    <div class="line_param_bottom">
-                      9/3/5
+                    <div class="r_p">
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Личный объем (ЛО):
+                        </div>
+                        <div class="line_param_bottom">
+                          500
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Накопленный групповой объем (НГО):
+                        </div>
+                        <div class="line_param_bottom">
+                          456
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Квалификационный объем (КО):
+                        </div>
+                        <div class="line_param_bottom">
+                          4522
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Накопленный групповой объем (НГО):
+                        </div>
+                        <div class="line_param_bottom">
+                          764
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Расчетный ранг:
+                        </div>
+                        <div class="line_param_bottom">
+                          Наименование
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Максимально достигнутый ранг:
+                        </div>
+                        <div class="line_param_bottom">
+                          Наименование
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
+                      <div class="line_param">
+                        <div class="line_param_top">
+                          Дата регистрации:
+                        </div>
+                        <div class="line_param_bottom">
+                          25.09.2018
+                        </div>
+                        <a href="#" class="line_param_clear"></a>
+                        <div class="line_param_border"></div>
+                      </div>
                     </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
-                  </div>
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Групповой объем (ГО):
-                    </div>
-                    <div class="line_param_bottom">
-                      235
-                    </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
-                  </div>
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Организационный объем (ОО):
-                    </div>
-                    <div class="line_param_bottom">
-                      569
-                    </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
-                  </div>
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Баллы в резерве:
-                    </div>
-                    <div class="line_param_bottom">
-                      231
-                    </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
-                  </div>
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Ранг на начало:
-                    </div>
-                    <div class="line_param_bottom">
-                      Наименование
-                    </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
                   </div>
                 </div>
-                <div class="r_p">
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Личный объем (ЛО):
+                <div class="component_body" style="padding-bottom: 150px">
+                  <a href="#" class="hidden">Скрыть</a>
+                  <div class="line_param_input">
+                    <div class="l_p">
+                      <div class="nav_links">
+                        <a class="brd_green fill w50" href="#">Стать партнером</a>
+                        <a class="brd_green w50 last" href="#">Терминировать</a>
+                      </div>
                     </div>
-                    <div class="line_param_bottom">
-                      500
+                    <div class="r_p">
+                      <div class="nav_links">
+                        <a class="brd_green fill w50" href="#" style="float: right">Трансферт</a>
+                      </div>
                     </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
                   </div>
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Накопленный групповой объем (НГО):
+                </div>
+              </div>
+            </div>
+            <div class="modal_send">
+              <a href="#" class="closebig"></a>
+              <h2>Перевести баллы между партнерами</h2>
+              <p style="margin: 25px 0">Перевести из резерва партнера: <span style="font-weight: bold; text-transform: uppercase">Михайлов Д.И.</span></p>
+              <div class="component_body">
+                <div class="line_param_input">
+                  <div class="l_p">
+                    <div class="line_param">
+                      <div class="line_param_top">
+                        ЛО
+                      </div>
+                      <div class="line_param_bottom">
+                        0
+                      </div>
                     </div>
-                    <div class="line_param_bottom">
-                      456
+                    <div class="label_in">
+                      <input type="text" class="tinput" />
+                      <label class="tlabel">Партнер-получатель</label>
+                      <a href="#" class="line_param_down"></a>
                     </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
                   </div>
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Квалификационный объем (КО):
+                  <div class="r_p">
+                    <div class="line_param">
+                      <div class="line_param_top">
+                        Резерв
+                      </div>
+                      <div class="line_param_bottom">
+                        100
+                      </div>
                     </div>
-                    <div class="line_param_bottom">
-                      4522
+                    <div class="label_in">
+                      <input type="text" class="tinput" />
+                      <label class="tlabel">Количество к передаче</label>
                     </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
-                  </div>
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Накопленный групповой объем (НГО):
+                    <div class="nav_links">
+                      <a class="brd_green fill w50" href="#" style="float: right">Перевести</a>
                     </div>
-                    <div class="line_param_bottom">
-                      764
-                    </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
-                  </div>
-                  <div class="line_param">
-                    <div class="line_param_top">
-                      Расчетный ранг:
-                    </div>
-                    <div class="line_param_bottom">
-                      Наименование
-                    </div>
-                    <a href="#" class="line_param_clear"></a>
-                    <div class="line_param_border"></div>
                   </div>
                 </div>
               </div>
@@ -313,7 +424,7 @@
           <div class="footer_line">
             <a href="#">Начислить / списать средства</a>
             <a href="#">Перевести между лицевыми счетами</a>
-            <a href="#">Перевести баллы между партнерами</a>
+            <a href="#" class="send_points">Перевести баллы между партнерами</a>
           </div>
         </div>
       </div>
