Добавил третий блок страниц

--- a/lk14.html
+++ b/lk14.html
@@ -94,6 +94,13 @@
         <div class="c_head">
           <h1>Запросы от вышестоящих</h1>
         </div>
+        <div class="line_param_input">
+          <div class="l_p" style="margin-bottom: 30px">
+            <div class="nav_links" style="margin: 0">
+              <a class="brd_green fill w50" href="#">Создать новый запрос</a>
+            </div>
+          </div>
+        </div>
         <div class="component">
           <div class="component_body">
             <div class="f_part">
