--- a/lk16.html
+++ b/lk16.html
@@ -102,7 +102,7 @@
           <div class="line_param_input">
             <div class="sortblock">
               <div class="sortblock_param">
-                <h5 style="margin: 25px 0">владелец склада</h5>
+                <h5 style="margin: 25px 0">Владелец склада</h5>
                 <div class="radio">
                   <input class="custom-radio" type="radio" id="param1" name="param" value="Полное дерево">
                   <label for="param1">Ввести номер</label>
@@ -161,7 +161,7 @@
           </div>
         </div>
         <div class="component_body">
-          <h1>Корзина</h1>
+          <h3>Корзина</h3>
           <div class="line_param_input">
             <div class="l_p">
               <div class="line_param">
@@ -239,11 +239,11 @@
               <table class="otch_p bordered">
                 <thead>
                   <tr class="head_t">
-                    <th style="width: 35%">Наименование</th>
+                    <th style="width: 20%">Наименование</th>
                     <th>Артикул</th>
                     <th>Баллы</th>
                     <th>Цена</th>
-                    <th>Остаток по складу</th>
+                    <th style="width: 6%">Остаток по складу</th>
                     <th>Количество</th>
                   </tr>
                 </thead>
@@ -285,10 +285,10 @@
               <div class="line_param_input">
                 <div class="label_in">
                   <input type="text" class="tinput" />
-                  <label class="tlabel" style="top: auto">Оставить комментарий</label>
+                  <label class="tlabel">Оставить комментарий</label>
                 </div>
-                <div class="l_p" style="padding-bottom: 20px;">
-                  <div class="nav_links">
+                <div class="l_p" style="padding-bottom: 70px;">
+                  <div class="nav_links" style="margin-top: 0">
                     <a class="brd_green fill w50" href="#">Создать продажу</a>
                   </div>
                 </div>
@@ -300,7 +300,7 @@
       <div class="footer">
         <div class="footer_line">
           <div class="title_line">
-            <div class="title_line_t">Каталог</div>
+            <div class="title_line_t burger">Каталог</div>
           </div>
           <div class="modal_line">
             <a href="#" class="closebig"></a>
